--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
     <!-- Header-->
 
     <header>
-      <a href="WEBSTUDIO">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
 
       <nav>
         <ul>
-          <li><a href="http://">Studio</a></li>
-          <li><a href="http://">Portfolio</a></li>
-          <li><a href="http://">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
+<address>
+  <ul>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-
-      <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+      <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    </ul>
+    </address>
     </header>
 
     <!-- Titulo grande -->
@@ -114,7 +117,7 @@
     <!-- Footer -->
     <footer>
       <section>
-        <a href="WEBSTUDIO">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
