--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
     <!-- Titulo grande -->
     <main>
+      <section>
       <h1>Effective Solutions for Your Business</h1>
 
       <button type="button">Order Service</button>
-
+    </section>
       <!-- enumeracao -->
-
+      <section>
       <ul>
         <li><h3>Strategy</h3></li>
       </ul>
@@ -72,9 +73,9 @@
           passion for problem-solving.
         </p>
       
-
+      </section>
       <!-- What are we doing -->
-
+      <section>
       <h2>What are we doing</h2>
 
       <ul>
@@ -86,9 +87,9 @@
           <img src="img/Rectangle71.png" alt="phone in hand" width="360" />
         </li>
       </ul>
-
+    </section>
       <!-- Our Team -->
-
+      <section>
       <h2>Our Team</h2>
 
       <ul>
@@ -111,7 +112,7 @@
       </ul>
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
-      
+      </section>
     </main>
 
     <!-- Footer -->
