--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
     </header>
 
     <!-- Titulo grande -->
+                       <!-- section 1 -->
     <main>
       <section>
       <h1>Effective Solutions for Your Business</h1>
 
       <button type="button">Order Service</button>
     </section>
-      <!-- enumeracao -->
+
+      <!-- Enumeracao -->
+                         <!-- section 2 -->
       <section>
       <ul>
         <li><h3>Strategy</h3></li>
@@ -76,40 +79,56 @@
       
       </section>
       <!-- What are we doing -->
+                                <!-- section 3-->
       <section>
       <h2>What are we doing</h2>
 
       <ul>
-        <li><img src="img/Rectangle71-2.png" alt="computer" width="360" /></li>
+        <li><img src="img/Rectangle 71-2.jpg" alt="computer" width="360" /></li>
         <li>
-          <img src="img/Rectangle71-1.png" alt="phone screen" width="360" />
+          <img src="img/Rectangle 71-1.jpg" alt="phone screen" width="360" />
         </li>
         <li>
-          <img src="img/Rectangle71.png" alt="phone in hand" width="360" />
+          <img src="img/Rectangle 71.jpg" alt="phone in hand" width="360" />
         </li>
       </ul>
     </section>
       <!-- Our Team -->
+                        <!-- section 4 -->
       <section>
       <h2>Our Team</h2>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <ul>
-        <li><img src="img/TeamCard1.png" alt="profile photo Mark" /></li>
+        <li><img src="img/Team Card 1.jpg" alt="profile photo Mark" /></li>
       </ul>
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
         <ul>
-        <li><img src="img/TeamCard2.png" alt="profile photo Tom" /></li>
+        <li><img src="img/Team Card 2.jpg" alt="profile photo Tom" /></li>
       </ul>
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
         <ul>
-        <li><img src="img/TeamCard3.png" alt="profile photo Camila" /></li>
+        <li><img src="img/Team Card 3.jpg" alt="profile photo Camila" /></li>
       </ul>
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
         <ul>
-        <li><img src="img/TeamCard4.png" alt="profile photo Daniel" /></li>
+        <li><img src="img/Team Card 4.jpg" alt="profile photo Daniel" /></li>
       </ul>
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
