--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h2>What are we doing</h2>
 
       <ul>
-        <li><img src="img/Rectangle 71-2.jpg" alt="computer" width="360" /></li>
+        <li><img src="./img/Rectangle 71-2.jpg" alt="computer" width="360" /></li>
         <li>
           <img src="img/Rectangle 71-1.jpg" alt="phone screen" width="360" />
         </li>
