--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
       <!-- Enumeracao -->
                          <!-- section 2 -->
       <section>
-      <ul>
-        <li><h3>Strategy</h3></li>
-      </ul>
+      <h3>Strategy</h3>
+     
         
         <p>
           Our goal is to identify the business problem to walk away with the
@@ -86,10 +85,10 @@
       <ul>
         <li><img src="./img/Rectangle 71-2.jpg" alt="computer" width="360" /></li>
         <li>
-          <img src="img/Rectangle 71-1.jpg" alt="phone screen" width="360" />
+          <img src="./img/Rectangle 71-1.jpg" alt="phone screen" width="360" />
         </li>
         <li>
-          <img src="img/Rectangle 71.jpg" alt="phone in hand" width="360" />
+          <img src="./img/Rectangle 71.jpg" alt="phone in hand" width="360" />
         </li>
       </ul>
     </section>
