--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <!-- Enumeracao -->
                          <!-- section 2 -->
       <section>
-      <h3>Strategy</h3>
-     
+    <ul> 
+      <li><h3>Strategy</h3></li>
+    </ul>
         
         <p>
           Our goal is to identify the business problem to walk away with the
@@ -146,3 +147,4 @@
     </footer>
   </body>
 </html>
+
