--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
       <h2>What are we doing</h2>
 
       <ul>
-        <li><img src="./img/Rectangle 71-2.jpg" alt="computer" width="360" /></li>
+        <li><img src="./images/imgcomp.jpg" alt="computer" width="360" /></li>
         <li>
-          <img src="./img/Rectangle 71-1.jpg" alt="phone screen" width="360" />
+          <img src="./images/imgtel.jpg" alt="phone screen" width="360" />
         </li>
         <li>
-          <img src="./img/Rectangle 71.jpg" alt="phone in hand" width="360" />
+          <img src="./images/imgtelhand.jpg" alt="phone in hand" width="360" />
         </li>
       </ul>
     </section>
@@ -113,22 +113,22 @@
 
 
       <ul>
-        <li><img src="img/Team Card 1.jpg" alt="profile photo Mark" /></li>
+        <li><img src="images/Team Card 1.jpg" alt="profile photo Mark" /></li>
       </ul>
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
         <ul>
-        <li><img src="img/Team Card 2.jpg" alt="profile photo Tom" /></li>
+        <li><img src="images/Team Card 2.jpg" alt="profile photo Tom" /></li>
       </ul>
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
         <ul>
-        <li><img src="img/Team Card 3.jpg" alt="profile photo Camila" /></li>
+        <li><img src="images/Team Card 3.jpg" alt="profile photo Camila" /></li>
       </ul>
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
         <ul>
-        <li><img src="img/Team Card 4.jpg" alt="profile photo Daniel" /></li>
+        <li><img src="images/Team Card 4.jpg" alt="profile photo Daniel" /></li>
       </ul>
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
