--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <!-- Enumeracao -->
                          <!-- section 2 -->
       <section>
+        <h2>Description</h2>
     <ul>
       <li>
       <h3>Strategy</h3>
@@ -141,4 +142,5 @@
     </footer>
   </body>
 </html>
+
 
