--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
 
   <body>
@@ -105,26 +105,26 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/TeamCard1.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./images/card1.jpg" alt="Mark Guerrero" width="264" />
 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/TeamCard2.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/card2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./images/TeamCard3.jpg" alt="Camila Garcia"  width="264"/>
+            <img src="./images/card3.jpg" alt="Camila Garcia"  width="264"/>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./images/TeamCard4.jpg" alt="Daniel Wilson"  width="264"/>
+            <img src="./images/card4.jpg" alt="Daniel Wilson"  width="264"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
